# formacion1-cabildo

./: README.md  app.py  datos.json  pyproject.toml
static/: estilos.css  script.js
templates/: index.html  panel.html
