[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor-red-saas"
version = "1.0.0"
description = "Primer proyecto web app"
authors = [
    { name = "El-bachir", email = "elbachirp@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "Flask>=3.0.0",
    "requests>=2.31.0"
]

[project.urls]
"Homepage" = "https://github.com/elbachirx1/formacion1-cabildo"